--- a/tsStudy.html
+++ b/tsStudy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <title>Learing Typescript</title>
+    <title>Learning Typescript</title>
 </head>
 <body>
+    <script src='./scripts.js'></script>
 </body>
