--- a/tsStudy.html
+++ b/tsStudy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Testing git users</title>
+    <title>Delete this branch</title>
 </head>
 <body>
     <script src='./scripts.js'></script>
