--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Learning Typescript</title>
 </head>
 <body>
-    <script src='./scripts.js'></script>
-    <script src='./excercise.js'></script>
+    <script src='./TSandES6/scripts.js'></script>
+    <!-- <script src='./excercise.js'></script> -->
 </body>
