--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 </head>
 <body>
     <script src='./TSandES6/scripts.js'></script>
-    <!-- <script src='./excercise.js'></script> -->
+    <script src='./TSandES6/excercise.js'></script>
 </body>
