--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <title>Learning Typescript</title>
 </head>
 <body>
-    <script src='./namespaces/scripts.js'></script>
+    <!-- <script src='./modules/scripts.js'></script> -->
+    <script src="node_modules/systemjs/dist/system.js"></script>
+    <script>
+        System.import('/modules/scripts.js');
+        System.config({
+            defaultJSExtension: true
+        })
+        </script>
     <!-- <script src='./classesAndObjects/excercise.js'></script> -->
 </body>
