--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
     <title>Learning Typescript</title>
 </head>
 <body>
-    <!-- <script src='./modules/scripts.js'></script> -->
-    <script src="node_modules/systemjs/dist/system.js"></script>
-    <script>
-        System.import('/modules/scripts.js');
-        System.config({
-            defaultJSExtension: true
-        })
-        </script>
+    <script src='./interfaces/scripts.js'></script>
     <!-- <script src='./classesAndObjects/excercise.js'></script> -->
 </body>
