--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Learning Typescript</title>
 </head>
 <body>
-    <script src='./generics/scripts.js'></script>
-    <!-- <script src='./classesAndObjects/excercise.js'></script> -->
+    <!-- <script src='./generics/scripts.js'></script> -->
+    <script src='./generics/excercise.js'></script>
 </body>
